# RosBag-Annotator

./: .gitignore  README.md  install.sh  main.py  pyproject.toml
rosbag_annotator/: __init__.py  cdr.py  dialogs.py  export.py  extractor.py  main_window.py  meta.py  models.py  preview.py  prompt_panel.py  table.py  timeline.py
